--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,9 +24,9 @@
     All Rights Reserved.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.tunesremote"
-  android:versionCode="7" android:versionName="2.0.5">
+  android:versionCode="8" android:versionName="2.0.6">
   <application android:icon="@drawable/icon" android:label="@string/app_name">
-    <service android:name=".BackendService" />\
+    <service android:name=".BackendService" />
     <activity android:name=".ControlActivity" android:configChanges="keyboardHidden|orientation">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
@@ -59,5 +59,7 @@
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
   <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
   <uses-permission android:name="android.permission.VIBRATE" />
+  <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+  
   <uses-sdk android:minSdkVersion="5"></uses-sdk>
 </manifest>
