--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -61,5 +61,5 @@
   <uses-permission android:name="android.permission.VIBRATE" />
   <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
   
-  <uses-sdk android:minSdkVersion="5"></uses-sdk>
+  <uses-sdk android:minSdkVersion="5" android:targetSdkVersion="10"></uses-sdk>
 </manifest>
