--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,7 +43,7 @@
     <activity android:name=".PrefsActivity" android:configChanges="keyboardHidden|orientation" />
     <activity android:name=".WizardActivity" android:configChanges="keyboardHidden|orientation" />
     <activity android:name=".ServerActivity" android:configChanges="keyboardHidden|orientation" />
-    <provider android:name="org.tunesremote.util.RecentProvider" android:authorities="org.tunesremote.recent" />
+    <provider android:name=".util.RecentProvider" android:authorities="org.tunesremote.recent" />
     <meta-data android:name="android.app.default_searchable" android:value=".SearchActivity" />
     <activity android:name=".SearchActivity" android:launchMode="singleTop" android:configChanges="keyboardHidden|orientation">
       <intent-filter>
