Started implementation of an Album view (issue #8), which requires further testing. It works okay but it a bit temperamental, feedback/fixes would be appreciated. Also added a tablet view for tablets running 3.2 or above in the single album view.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,6 +37,7 @@
     <activity android:name=".PairingActivity" android:theme="@android:style/Theme.Dialog" />
     <activity android:name=".ArtistsActivity" android:configChanges="keyboardHidden|orientation" />
     <activity android:name=".AlbumsActivity" android:configChanges="keyboardHidden|orientation" />
+    <activity android:name=".AllAlbumsActivity" android:configChanges="keyboardHidden|orientation" />
     <activity android:name=".TracksActivity" android:configChanges="keyboardHidden|orientation" />
     <activity android:name=".PlaylistsActivity" android:configChanges="keyboardHidden|orientation" />
     <activity android:name=".BrowseActivity" android:configChanges="keyboardHidden|orientation" />
