--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,7 @@
       </intent-filter>
     </activity>
     <activity android:name=".LibraryActivity" android:configChanges="keyboardHidden|orientation" />
+    <activity android:name=".LibraryBrowseActivity" android:configChanges="keyboardHidden|orientation" />
     <activity android:name=".PairingActivity" android:theme="@android:style/Theme.Dialog" />
     <activity android:name=".ArtistsActivity" android:configChanges="keyboardHidden|orientation" />
     <activity android:name=".AlbumsActivity" android:configChanges="keyboardHidden|orientation" />
