--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
+<!--
     TunesRemote+ - http://code.google.com/p/tunesremote-plus/
     
     Copyright (C) 2008 Jeffrey Sharkey, http://jsharkey.org/
@@ -23,45 +23,100 @@
     Copyright (C) 2008. Jeffrey Sharkey, http://jsharkey.org/
     All Rights Reserved.
 -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.tunesremote"
-  android:versionCode="243" android:versionName="2.4.3">
-  <application android:icon="@drawable/icon" android:label="@string/app_name">
-    <service android:name=".BackendService" />
-    <activity android:name=".ControlActivity" android:configChanges="keyboardHidden|orientation">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
-    <activity android:name=".LibraryActivity" android:configChanges="keyboardHidden|orientation" />
-    <activity android:name=".LibraryBrowseActivity" android:configChanges="keyboardHidden|orientation" />
-    <activity android:name=".PairingActivity" android:theme="@android:style/Theme.Dialog" />
-    <activity android:name=".ArtistsActivity" android:configChanges="keyboardHidden|orientation" />
-    <activity android:name=".AlbumsActivity" android:configChanges="keyboardHidden|orientation" />
-    <activity android:name=".AllAlbumsActivity" android:configChanges="keyboardHidden|orientation" />
-    <activity android:name=".TracksActivity" android:configChanges="keyboardHidden|orientation" />
-    <activity android:name=".PlaylistsActivity" android:configChanges="keyboardHidden|orientation" />
-    <activity android:name=".BrowseActivity" android:configChanges="keyboardHidden|orientation" />
-    <activity android:name=".PrefsActivity" android:configChanges="keyboardHidden|orientation" />
-    <activity android:name=".WizardActivity" android:configChanges="keyboardHidden|orientation" />
-    <activity android:name=".ServerActivity" android:configChanges="keyboardHidden|orientation" />
-    <provider android:name=".util.RecentProvider" android:authorities="org.tunesremote.recent" />
-    <meta-data android:name="android.app.default_searchable" android:value=".SearchActivity" />
-    <activity android:name=".SearchActivity" android:launchMode="singleTop" android:configChanges="keyboardHidden|orientation">
-      <intent-filter>
-        <action android:name="android.intent.action.SEARCH" />
-        <action android:name="android.media.action.MEDIA_PLAY_FROM_SEARCH" />
-        <category android:name="android.intent.category.DEFAULT" />
-      </intent-filter>
-      <meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
-    </activity>
-    <activity android:name=".NowPlayingActivity" android:configChanges="keyboardHidden|orientation"></activity>
-  </application>
-  <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-  <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
-  <uses-permission android:name="android.permission.VIBRATE" />
-  <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-  
-  <uses-sdk android:minSdkVersion="5" android:targetSdkVersion="10"></uses-sdk>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="org.tunesremote"
+    android:versionCode="243"
+    android:versionName="2.4.3" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
+        <service android:name=".BackendService" />
+
+        <activity
+            android:name=".ControlActivity"
+            android:configChanges="keyboardHidden|orientation" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".LibraryActivity"
+            android:configChanges="keyboardHidden|orientation" />
+        <activity
+            android:name=".LibraryBrowseActivity"
+            android:configChanges="keyboardHidden|orientation" />
+        <activity
+            android:name=".PairingActivity"
+            android:theme="@android:style/Theme.Dialog" />
+        <activity
+            android:name=".ArtistsActivity"
+            android:configChanges="keyboardHidden|orientation" />
+        <activity
+            android:name=".AlbumsActivity"
+            android:configChanges="keyboardHidden|orientation" />
+        <activity
+            android:name=".AllAlbumsActivity"
+            android:configChanges="keyboardHidden|orientation" />
+        <activity
+            android:name=".TracksActivity"
+            android:configChanges="keyboardHidden|orientation" />
+        <activity
+            android:name=".PlaylistsActivity"
+            android:configChanges="keyboardHidden|orientation" />
+        <activity
+            android:name=".BrowseActivity"
+            android:configChanges="keyboardHidden|orientation" />
+        <activity
+            android:name=".PrefsActivity"
+            android:configChanges="keyboardHidden|orientation" />
+        <activity
+            android:name=".WizardActivity"
+            android:configChanges="keyboardHidden|orientation" />
+        <activity
+            android:name=".ServerActivity"
+            android:configChanges="keyboardHidden|orientation" />
+
+        <provider
+            android:name=".util.RecentProvider"
+            android:authorities="org.tunesremote.recent" />
+
+        <meta-data
+            android:name="android.app.default_searchable"
+            android:value=".SearchActivity" />
+
+        <activity
+            android:name=".SearchActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:launchMode="singleTop" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+                <action android:name="android.media.action.MEDIA_PLAY_FROM_SEARCH" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+        <activity
+            android:name=".NowPlayingActivity"
+            android:configChanges="keyboardHidden|orientation" >
+        </activity>
+    </application>
+
+    <uses-sdk
+        android:minSdkVersion="9"
+        android:targetSdkVersion="10" >
+    </uses-sdk>
+
 </manifest>
