--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,92 +24,92 @@
     All Rights Reserved.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.tunesremote"
-    android:versionCode="250"
-    android:versionName="2.5.0" >
+          package="org.tunesremote"
+          android:versionCode="250"
+          android:versionName="2.5.0">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="16" >
+            android:minSdkVersion="8"
+            android:targetSdkVersion="16">
     </uses-sdk>
 
     <application
-        android:icon="@drawable/icon"
-        android:label="@string/app_name" >
-        <service android:name=".BackendService" />
+            android:icon="@drawable/new_icon"
+            android:label="@string/app_name">
+        <service android:name=".BackendService"/>
 
         <activity
-            android:name=".ControlActivity"
-            android:configChanges="keyboardHidden|orientation" >
+                android:name=".ControlActivity"
+                android:configChanges="keyboardHidden|orientation">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-            android:name=".LibraryActivity"
-            android:configChanges="keyboardHidden|orientation" />
+                android:name=".LibraryActivity"
+                android:configChanges="keyboardHidden|orientation"/>
         <activity
-            android:name=".LibraryBrowseActivity"
-            android:configChanges="keyboardHidden|orientation" />
+                android:name=".LibraryBrowseActivity"
+                android:configChanges="keyboardHidden|orientation"/>
         <activity
-            android:name=".PairingActivity"
-            android:theme="@android:style/Theme.Dialog" />
+                android:name=".PairingActivity"
+                android:theme="@android:style/Theme.Dialog"/>
         <activity
-            android:name=".AlbumsActivity"
-            android:configChanges="keyboardHidden|orientation" />
+                android:name=".AlbumsActivity"
+                android:configChanges="keyboardHidden|orientation"/>
         <activity
-            android:name=".TracksActivity"
-            android:configChanges="keyboardHidden|orientation" />
+                android:name=".TracksActivity"
+                android:configChanges="keyboardHidden|orientation"/>
         <activity
-            android:name=".PlaylistsActivity"
-            android:configChanges="keyboardHidden|orientation" />
+                android:name=".PlaylistsActivity"
+                android:configChanges="keyboardHidden|orientation"/>
         <activity
-            android:name=".BrowseActivity"
-            android:configChanges="keyboardHidden|orientation" />
+                android:name=".BrowseActivity"
+                android:configChanges="keyboardHidden|orientation"/>
         <activity
-            android:name=".PrefsActivity"
-            android:configChanges="keyboardHidden|orientation" />
+                android:name=".PrefsActivity"
+                android:configChanges="keyboardHidden|orientation"/>
         <activity
-            android:name=".WizardActivity"
-            android:configChanges="keyboardHidden|orientation" />
+                android:name=".WizardActivity"
+                android:configChanges="keyboardHidden|orientation"/>
         <activity
-            android:name=".ServerActivity"
-            android:configChanges="keyboardHidden|orientation" />
+                android:name=".ServerActivity"
+                android:configChanges="keyboardHidden|orientation"/>
 
         <provider
-            android:name=".util.RecentProvider"
-            android:authorities="org.tunesremote.recent" />
+                android:name=".util.RecentProvider"
+                android:authorities="org.tunesremote.recent"/>
 
         <meta-data
-            android:name="android.app.default_searchable"
-            android:value=".SearchActivity" /> 
+                android:name="android.app.default_searchable"
+                android:value=".SearchActivity"/>
 
         <activity
-            android:name=".SearchActivity"
-            android:configChanges="keyboardHidden|orientation"
-            android:launchMode="singleTop" >
+                android:name=".SearchActivity"
+                android:configChanges="keyboardHidden|orientation"
+                android:launchMode="singleTop">
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-                <action android:name="android.media.action.MEDIA_PLAY_FROM_SEARCH" />
+                <action android:name="android.intent.action.SEARCH"/>
+                <action android:name="android.media.action.MEDIA_PLAY_FROM_SEARCH"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
 
             <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
+                    android:name="android.app.searchable"
+                    android:resource="@xml/searchable"/>
         </activity>
         <activity
-            android:name=".NowPlayingActivity"
-            android:configChanges="keyboardHidden|orientation" >
+                android:name=".NowPlayingActivity"
+                android:configChanges="keyboardHidden|orientation">
         </activity>
     </application>
 
