--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,7 +40,7 @@
     </uses-sdk>
 
     <application
-            android:icon="@drawable/new_icon"
+            android:icon="@drawable/icon"
             android:label="@string/app_name">
         <service android:name=".BackendService"/>
 
