--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,6 +43,7 @@
             android:icon="@drawable/icon"
             android:label="@string/app_name">
         <service android:name=".BackendService"/>
+        <service android:name=".util.NotificationService"/>
 
         <activity
                 android:name=".ControlActivity"
@@ -108,6 +109,12 @@
                 android:name=".NowPlayingActivity"
                 android:configChanges="keyboardHidden|screenSize|orientation">
         </activity>
+
+        <receiver android:name=".util.LockscreenReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
